assets/less/base/ui/header.less
.header {
	display: block;
	position: fixed;
	z-index: @zIndex-navbar;
	height: @navbarHeight;
	top: 0;
	border-bottom: 1px solid @primaryDarker;
	box-shadow: 0px 0px 4px @primaryDarker;
	background: @primary;
	width: 100%;
	.translate3d(0);
	transition-duration: @mobileNavTransitionTime;
}
.header-push {
	.translate3d(@mobileNavWidth);
}
.header-inner {
	width: 100%;
	height: 100%;
	position: relative;
}
.header-collapse {
	@media @desktop {
		.column(8);
		height: 50px;
	}
	@media @mobile {
		display: none;
		visibility: hidden;
	}
}
.header-brand {
	@media @desktop {
		.column(2);
	}
	@media @mobile {
		display: inline-block;
		width: ~"calc(100% - 100px)";
		margin: 0;

		text-align: center;
	}

	.large-text();
	.bold-text();
	text-decoration: none;
	.text-shadow(0px 0px 1px @white);
	text-rendering: optimizeLegibility;

	-webkit-font-smoothing: subpixel-antialiased;

	height: 50px;
	line-height: 49px;
}
.header-brand--normal {
	height: 30px;
	color: #fff;
	.text-shadow(0px 0px 2px @primaryDarkest);
}

.header-brand--inverse {
	color: @primaryLighter;
	.text-shadow(0px 0px 2px @primaryDarkest);
}

.header-toggle {
	width: @navbarHeight;
	display: block;
	border: none;
	outline: none;
	height: @navbarHeight;
	text-align: center;
	padding: 0;
	margin: 0;
	background: transparent;
	position: relative;
	.box-fix;
}
.header-toggle-icon {
	color: #fff;
}
.header-toggle-sidebar {
	float: left;
	border-right: 1px solid @white;
}
.header-toggle-search {
	float: right;
	border-left: 1px solid @white;
}
.search--navbar {
	@media @desktop {
		width: 100%;
		margin-top: 5px;
	}

	@media @mobile {
		display: none;
		visibility: hidden;
	}
}
#header-login {
	@media @desktop {
		display: inline-block;
		float: right;
		margin: 6px 1%;
	}
}
#loginformsubmit {
	border: 1px solid @btnBorder;
}

